Bug 1347689 Intermittent pointerevent_touch-action-button-test_touch-manual.html. r=kats.
The test case uses double intervals to make sure there is enough time to wait for the scroll event before continuing the testing. However, it doesn't work while the first timeout is delayed and the second one isn't. Tweaked the test case to start the second timer when the first one timeout.

MozReview-Commit-ID: gvhtIpzauE

UltraBlame original commit: 970cab99ef60d868f592e94b5cebe18d2f67efd8

--- a/dom/events/test/pointerevents/pointerevent_touch-action-button-test_touch-manual.html
+++ b/dom/events/test/pointerevents/pointerevent_touch-action-button-test_touch-manual.html
@@ -681,8 +681,10 @@ updateDescriptionThirdStepTouchActionElement
 (
 target0
 scrollReturnInterval
+function
+(
 )
-;
+{
 setTimeout
 (
 function
@@ -694,8 +696,6 @@ isFirstPart
 false
 ;
 }
-2
-*
 scrollReturnInterval
 )
 ;
@@ -710,6 +710,9 @@ is
 still
 being
 performed
+}
+)
+;
 }
 }
 else
