--- a/dom/events/test/pointerevents/pointerevent_touch-action-span-test_touch-manual.html
+++ b/dom/events/test/pointerevents/pointerevent_touch-action-span-test_touch-manual.html
@@ -694,8 +694,10 @@ updateDescriptionThirdStepTouchActionElement
 (
 target0
 scrollReturnInterval
+function
+(
 )
-;
+{
 setTimeout
 (
 function
@@ -727,8 +729,6 @@ yScrollIsReceived
 false
 ;
 }
-2
-*
 scrollReturnInterval
 )
 ;
@@ -743,6 +743,9 @@ is
 still
 being
 performed
+}
+)
+;
 }
 }
 }
