--- a/testing/web-platform/tests/pointerevents/pointerevent_touch-action-button-test_touch-manual.html
+++ b/testing/web-platform/tests/pointerevents/pointerevent_touch-action-button-test_touch-manual.html
@@ -681,8 +681,10 @@ updateDescriptionThirdStepTouchActionElement
 (
 target0
 scrollReturnInterval
+function
+(
 )
-;
+{
 setTimeout
 (
 function
@@ -694,8 +696,6 @@ isFirstPart
 false
 ;
 }
-2
-*
 scrollReturnInterval
 )
 ;
@@ -710,6 +710,9 @@ is
 still
 being
 performed
+}
+)
+;
 }
 }
 else
