Bug 1357082 - Wait until after the next animation frame to trigger mousemove.
MozReview-Commit-ID: 3oVUzPuNGoa

UltraBlame original commit: f67f8342b9811251f9d72d62f8a5df62f5efa124

--- a/dom/tests/mochitest/pointerlock/file_pointerlock-api.html
+++ b/dom/tests/mochitest/pointerlock/file_pointerlock-api.html
@@ -528,6 +528,20 @@ mousemove
 mouseMoveHandler
 )
 ;
+requestAnimationFrame
+(
+(
+)
+=
+>
+{
+setTimeout
+(
+(
+)
+=
+>
+{
 synthesizeMouseAtCenter
 (
 div
@@ -539,6 +553,13 @@ mousemove
 "
 }
 window
+)
+;
+}
+0
+)
+;
+}
 )
 ;
 }
