Bug 1410634 P2 Verify ServiceWorkerInfo.lastUpdateTime is not changed when reading from http cache. r=tt
UltraBlame original commit: 1abb70007b4c50a588b6a344879fd9efc3ef9ca5

--- a/dom/workers/test/serviceworkers/test_devtools_track_serviceworker_time.html
+++ b/dom/workers/test/serviceworkers/test_devtools_track_serviceworker_time.html
@@ -354,6 +354,10 @@ redundantTimeRecorded
 :
 false
 }
+/
+/
+On
+unregister
 {
 state
 :
@@ -989,6 +993,80 @@ return
 promise
 ;
 }
+async
+function
+testHttpCacheUpdateTime
+(
+)
+{
+let
+iframe
+=
+document
+.
+querySelector
+(
+"
+iframe
+"
+)
+;
+let
+reg
+=
+await
+iframe
+.
+contentWindow
+.
+navigator
+.
+serviceWorker
+.
+getRegistration
+(
+)
+;
+let
+lastUpdateTime
+=
+registrationInfo
+.
+lastUpdateTime
+;
+await
+reg
+.
+update
+(
+)
+;
+is
+(
+lastUpdateTime
+registrationInfo
+.
+lastUpdateTime
+"
+The
+update
+time
+should
+not
+change
+when
+SW
+script
+is
+read
+from
+http
+cache
+.
+"
+)
+;
+}
 function
 unregister
 (
@@ -1118,6 +1196,11 @@ register
 then
 (
 testServiceWorkerInfo
+)
+.
+then
+(
+testHttpCacheUpdateTime
 )
 .
 then
