--- a/toolkit/content/tests/widgets/test_videocontrols.html
+++ b/toolkit/content/tests/widgets/test_videocontrols.html
@@ -563,6 +563,20 @@ video
 "
 )
 ;
+const
+controlBar
+=
+getAnonElementWithinVideoByAttribute
+(
+video
+"
+anonid
+"
+"
+controlBar
+"
+)
+;
 let
 expectingEvents
 ;
@@ -2911,6 +2925,150 @@ waitForEvent
 "
 play
 "
+)
+;
+}
+)
+;
+/
+*
+*
+Bug
+1402877
+:
+Don
+'
+t
+let
+click
+event
+dispatch
+through
+controlBar
+to
+video
+element
+.
+*
+/
+add_task
+(
+async
+function
+click_event_dispatch
+(
+)
+{
+const
+clientScriptClickHandler
+=
+(
+e
+)
+=
+>
+{
+ok
+(
+false
+"
+Should
+not
+receive
+the
+event
+"
+)
+;
+}
+;
+video
+.
+addEventListener
+(
+"
+click
+"
+clientScriptClickHandler
+)
+;
+video
+.
+pause
+(
+)
+;
+await
+waitForEvent
+(
+"
+pause
+"
+)
+;
+video
+.
+currentTime
+=
+0
+.
+0
+;
+await
+waitForEvent
+(
+"
+seeking
+"
+"
+seeked
+"
+)
+;
+is
+(
+video
+.
+paused
+true
+"
+checking
+video
+play
+state
+"
+)
+;
+synthesizeMouse
+(
+video
+scrubberOffsetX
++
+10
+scrubberCenterY
+{
+}
+)
+;
+await
+waitForEvent
+(
+"
+seeking
+"
+"
+seeked
+"
+)
+;
+video
+.
+removeEventListener
+(
+"
+click
+"
+clientScriptClickHandler
 )
 ;
 }
