Bug 1402877 - Part 1. Refactor mochitest test_videocontrols.html to use add_task(). r=jaws
MozReview-Commit-ID: AZGgwLDUoZD

UltraBlame original commit: aa39d335365a7b2e196ce164b2387a8ee7ae9645

--- a/toolkit/content/tests/widgets/test_videocontrols.html
+++ b/toolkit/content/tests/widgets/test_videocontrols.html
@@ -72,6 +72,53 @@ js
 script
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+/
+tests
+/
+SimpleTest
+/
+SpawnTask
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+head
+.
+js
+"
+>
+<
+/
+script
+>
+<
 link
 rel
 =
@@ -504,12 +551,7 @@ scrubberHeight
 2
 )
 ;
-var
-testnum
-=
-1
-;
-var
+const
 video
 =
 document
@@ -521,95 +563,39 @@ video
 "
 )
 ;
-const
-domUtil
-=
-SpecialPowers
-.
-Cc
-[
-"
-mozilla
-.
-org
-/
-inspector
-/
-dom
--
-utils
+let
+expectingEvents
 ;
-1
-"
-]
-.
-getService
-(
-SpecialPowers
-.
-Ci
-.
-inIDOMUtils
-)
+let
+expectingEventPromise
 ;
-function
-getButtonByAttribute
-(
-aName
-aValue
-)
-{
-var
-kids
-=
-domUtil
-.
-getChildrenForNode
-(
-video
-true
-)
-;
-var
-videocontrols
-=
-kids
-[
-1
-]
-;
-return
-SpecialPowers
-.
-wrap
-(
-document
-)
-.
-getAnonymousElementByAttribute
-(
-videocontrols
-aName
-aValue
-)
-;
-}
+async
 function
 isMuteButtonMuted
 (
 )
 {
-var
+const
 muteButton
 =
-getButtonByAttribute
+getAnonElementWithinVideoByAttribute
 (
+video
 "
 anonid
 "
 "
 muteButton
 "
+)
+;
+await
+new
+Promise
+(
+SimpleTest
+.
+executeSoon
 )
 ;
 return
@@ -629,23 +615,34 @@ true
 "
 ;
 }
+async
 function
 isVolumeSliderShowingCorrectVolume
 (
 expectedVolume
 )
 {
-var
+const
 volumeControl
 =
-getButtonByAttribute
+getAnonElementWithinVideoByAttribute
 (
+video
 "
 anonid
 "
 "
 volumeControl
 "
+)
+;
+await
+new
+Promise
+(
+SimpleTest
+.
+executeSoon
 )
 ;
 is
@@ -727,60 +724,274 @@ getBoundingClientRect
 ;
 }
 function
-runTest
+verifyExpectedEvent
 (
 event
+)
+{
+const
+checkingEvent
+=
+expectingEvents
+.
+shift
+(
+)
+;
+if
+(
+event
+.
+type
+=
+=
+checkingEvent
 )
 {
 ok
 (
 true
 "
--
--
--
--
--
-test
-#
+checking
+event
+type
+:
 "
-+
-testnum
-+
-"
--
--
--
--
--
-"
+checkingEvent
 )
 ;
-switch
+}
+else
+{
+expectingEventPromise
+.
+reject
 (
-testnum
+new
+Error
+(
+Got
+event
+:
+{
+event
+.
+type
+}
+expected
+:
+{
+checkingEvent
+}
+)
+)
+;
+}
+if
+(
+expectingEvents
+.
+length
+=
+=
+0
 )
 {
-/
-*
-*
-Check
-operation
-of
-play
-/
-pause
-/
-mute
-/
-unmute
-buttons
+expectingEventPromise
 .
-*
+resolve
+(
+)
+;
+}
+}
+async
+function
+waitForEvent
+(
+.
+.
+.
+eventTypes
+)
+{
+expectingEvents
+=
+eventTypes
+;
+return
+new
+Promise
+(
+(
+resolve
+reject
+)
+=
+>
+expectingEventPromise
+=
+{
+resolve
+reject
+}
+)
+.
+catch
+(
+e
+=
+>
+{
 /
-case
-1
+/
+Throw
+error
+here
+to
+get
+the
+caller
+in
+error
+stack
+.
+ok
+(
+false
+e
+)
+;
+}
+)
+;
+}
+add_task
+(
+async
+function
+setup
+(
+)
+{
+await
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+"
+set
+"
 :
+[
+[
+"
+media
+.
+cache_size
+"
+40000
+]
+]
+}
+)
+;
+await
+new
+Promise
+(
+resolve
+=
+>
+{
+video
+.
+addEventListener
+(
+"
+canplaythrough
+"
+resolve
+{
+once
+:
+true
+}
+)
+;
+video
+.
+src
+=
+"
+seek_with_sound
+.
+ogg
+"
+;
+}
+)
+video
+.
+addEventListener
+(
+"
+play
+"
+verifyExpectedEvent
+)
+;
+video
+.
+addEventListener
+(
+"
+pause
+"
+verifyExpectedEvent
+)
+;
+video
+.
+addEventListener
+(
+"
+volumechange
+"
+verifyExpectedEvent
+)
+;
+video
+.
+addEventListener
+(
+"
+seeking
+"
+verifyExpectedEvent
+)
+;
+video
+.
+addEventListener
+(
+"
+seeked
+"
+verifyExpectedEvent
+)
+;
+document
+.
+addEventListener
+(
+"
+mozfullscreenchange
+"
+verifyExpectedEvent
+)
+;
 /
 /
 Check
@@ -790,16 +1001,112 @@ upon
 load
 is
 (
-event
+video
 .
-type
-"
-canplaythrough
-"
+paused
+true
 "
 checking
-event
-type
+video
+play
+state
+"
+)
+;
+is
+(
+video
+.
+muted
+false
+"
+checking
+video
+mute
+state
+"
+)
+;
+}
+)
+;
+add_task
+(
+async
+function
+click_playbutton
+(
+)
+{
+synthesizeMouse
+(
+video
+playButtonCenterX
+playButtonCenterY
+{
+}
+)
+;
+await
+waitForEvent
+(
+"
+play
+"
+)
+;
+is
+(
+video
+.
+paused
+false
+"
+checking
+video
+play
+state
+"
+)
+;
+is
+(
+video
+.
+muted
+false
+"
+checking
+video
+mute
+state
+"
+)
+;
+}
+)
+;
+add_task
+(
+async
+function
+click_pausebutton
+(
+)
+{
+synthesizeMouse
+(
+video
+playButtonCenterX
+playButtonCenterY
+{
+}
+)
+await
+waitForEvent
+(
+"
+pause
 "
 )
 ;
@@ -831,164 +1138,16 @@ state
 "
 )
 ;
-/
-/
-Click
-the
-play
-button
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
-{
-synthesizeMouse
-(
-video
-playButtonCenterX
-playButtonCenterY
-{
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-2
-:
-is
+add_task
 (
-event
-.
-type
-"
-play
-"
-"
-checking
-event
-type
-"
-)
-;
-is
-(
-video
-.
-paused
-false
-"
-checking
-video
-play
-state
-"
-)
-;
-is
-(
-video
-.
-muted
-false
-"
-checking
-video
-mute
-state
-"
-)
-;
-/
-/
-Click
-the
-pause
-button
-SimpleTest
-.
-executeSoon
-(
+async
+function
+mute_volume
 (
 )
-=
->
-{
-synthesizeMouse
-(
-video
-playButtonCenterX
-playButtonCenterY
-{
-}
-)
-;
-}
-)
-;
-break
-;
-case
-3
-:
-is
-(
-event
-.
-type
-"
-pause
-"
-"
-checking
-event
-type
-"
-)
-;
-is
-(
-video
-.
-paused
-true
-"
-checking
-video
-play
-state
-"
-)
-;
-is
-(
-video
-.
-muted
-false
-"
-checking
-video
-mute
-state
-"
-)
-;
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
 {
 synthesizeMouse
 (
@@ -999,31 +1158,12 @@ muteButtonCenterY
 }
 )
 ;
-/
-/
-Mute
-.
-}
-)
-;
-break
-;
-case
-4
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 volumechange
 "
-"
-checking
-event
-type
-"
 )
 ;
 is
@@ -1054,14 +1194,16 @@ state
 "
 )
 ;
-SimpleTest
-.
-executeSoon
+}
+)
+;
+add_task
 (
+async
+function
+unmute_volume
 (
 )
-=
->
 {
 synthesizeMouse
 (
@@ -1072,14 +1214,44 @@ muteButtonCenterY
 }
 )
 ;
-/
-/
-Unmute
-.
-}
+await
+waitForEvent
+(
+"
+volumechange
+"
 )
 ;
-break
+is
+(
+video
+.
+paused
+true
+"
+checking
+video
+play
+state
+"
+)
+;
+is
+(
+video
+.
+muted
+false
+"
+checking
+video
+mute
+state
+"
+)
+;
+}
+)
 ;
 /
 *
@@ -1111,52 +1283,14 @@ them
 )
 *
 /
-case
-5
-:
-is
+add_task
 (
-event
-.
-type
-"
-volumechange
-"
-"
-checking
-event
-type
-"
-)
-;
-is
+async
+function
+styled_video
 (
-video
-.
-paused
-true
-"
-checking
-video
-play
-state
-"
 )
-;
-is
-(
-video
-.
-muted
-false
-"
-checking
-video
-mute
-state
-"
-)
-;
+{
 video
 .
 style
@@ -1217,15 +1351,6 @@ Click
 the
 play
 button
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
-{
 synthesizeMouse
 (
 video
@@ -1239,26 +1364,11 @@ playButtonCenterY
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-6
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 play
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -1290,29 +1400,22 @@ state
 "
 )
 ;
+/
+/
+Pause
+the
+video
 video
 .
 pause
 (
 )
 ;
-break
-;
-case
-7
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 pause
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -1350,15 +1453,6 @@ Click
 the
 mute
 button
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
-{
 synthesizeMouse
 (
 video
@@ -1372,26 +1466,11 @@ muteButtonCenterY
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-8
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 volumechange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -1429,10 +1508,6 @@ Clear
 the
 style
 set
-in
-test
-5
-.
 video
 .
 style
@@ -1460,45 +1535,22 @@ padding
 "
 "
 ;
+/
+/
+Unmute
+the
+video
 video
 .
 muted
 =
 false
 ;
-break
-;
-/
-*
-*
-Previous
-tests
-have
-moved
-playback
-postion
-reset
-it
-to
-0
-.
-*
-/
-case
-9
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 volumechange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -1530,6 +1582,33 @@ state
 "
 )
 ;
+}
+)
+;
+/
+*
+*
+Previous
+tests
+have
+moved
+playback
+postion
+reset
+it
+to
+0
+.
+*
+/
+add_task
+(
+async
+function
+reset_currentTime
+(
+)
+{
 ok
 (
 true
@@ -1553,93 +1632,15 @@ currentTime
 .
 0
 ;
-break
-;
-case
-10
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 seeking
 "
 "
-checking
-event
-type
-"
-)
-;
-ok
-(
-true
-"
-video
-position
-is
-at
-"
-+
-video
-.
-currentTime
-)
-;
-break
-;
-/
-*
-*
-Drag
-the
-slider
-'
-s
-thumb
-to
-the
-halfway
-point
-with
-the
-mouse
-.
-*
-/
-case
-11
-:
-is
-(
-event
-.
-type
-"
 seeked
 "
-"
-checking
-event
-type
-"
-)
-;
-ok
-(
-true
-"
-video
-position
-is
-at
-"
-+
-video
-.
-currentTime
 )
 ;
 /
@@ -1676,21 +1677,57 @@ position
 "
 )
 ;
-SimpleTest
-.
-executeSoon
+ok
 (
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
+)
+;
+}
+)
+;
+/
+*
+*
+Drag
+the
+slider
+'
+s
+thumb
+to
+the
+halfway
+point
+with
+the
+mouse
+.
+*
+/
+add_task
+(
+async
+function
+drag_slider
 (
 )
-=
->
 {
-var
+const
 beginDragX
 =
 scrubberOffsetX
 ;
-var
+const
 endDragX
 =
 scrubberOffsetX
@@ -1700,6 +1737,13 @@ scrubberWidth
 /
 2
 )
+;
+const
+expectedTime
+=
+videoDuration
+/
+2
 ;
 synthesizeMouse
 (
@@ -1752,83 +1796,15 @@ button
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-12
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 seeking
 "
 "
-checking
-event
-type
-"
-)
-;
-ok
-(
-true
-"
-video
-position
-is
-at
-"
-+
-video
-.
-currentTime
-)
-;
-break
-;
-/
-*
-*
-Click
-the
-slider
-at
-the
-1
-/
-4
-point
-with
-the
-mouse
-(
-jump
-backwards
-)
-*
-/
-case
-13
-:
-is
-(
-event
-.
-type
-"
 seeked
 "
-"
-checking
-event
-type
-"
 )
 ;
 ok
@@ -1845,13 +1821,6 @@ video
 .
 currentTime
 )
-;
-var
-expectedTime
-=
-videoDuration
-/
-2
 ;
 /
 /
@@ -1928,14 +1897,37 @@ position
 "
 )
 ;
-SimpleTest
-.
-executeSoon
+}
+)
+;
+/
+*
+*
+Click
+the
+slider
+at
+the
+1
+/
+4
+point
+with
+the
+mouse
 (
+jump
+backwards
+)
+*
+/
+add_task
+(
+async
+function
+click_slider
 (
 )
-=
->
 {
 synthesizeMouse
 (
@@ -1952,61 +1944,14 @@ scrubberCenterY
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-14
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 seeking
 "
 "
-checking
-event
-type
-"
-)
-;
-ok
-(
-true
-"
-video
-position
-is
-at
-"
-+
-video
-.
-currentTime
-)
-;
-break
-;
-case
-15
-:
-is
-(
-event
-.
-type
-"
 seeked
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -2122,7 +2067,7 @@ previous
 /
 position
 .
-var
+const
 lastPosition
 =
 (
@@ -2177,29 +2122,11 @@ volume
 .
 1
 ;
-break
-;
-/
-/
-See
-bug
-694696
-.
-case
-16
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 volumechange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -2235,20 +2162,29 @@ muted
 "
 )
 ;
+}
+)
+;
+/
+/
+See
+bug
+694696
+.
+add_task
+(
+async
+function
+change_volume
+(
+)
+{
 video
 .
 focus
 (
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
 synthesizeKey
 (
 "
@@ -2257,25 +2193,12 @@ VK_DOWN
 {
 }
 )
-)
 ;
-break
-;
-case
-17
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 volumechange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -2309,17 +2232,9 @@ muted
 "
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
-{
 ok
 (
+await
 isMuteButtonMuted
 (
 )
@@ -2343,26 +2258,11 @@ VK_UP
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-18
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 volumechange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -2397,20 +2297,14 @@ muted
 "
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
-{
 ok
 (
 !
+(
+await
 isMuteButtonMuted
 (
+)
 )
 "
 Mute
@@ -2433,26 +2327,11 @@ VK_DOWN
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-19
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 volumechange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -2486,17 +2365,9 @@ muted
 "
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
-{
 ok
 (
+await
 isMuteButtonMuted
 (
 )
@@ -2520,26 +2391,11 @@ muteButtonCenterY
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-20
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 volumechange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -2577,14 +2433,6 @@ muted
 "
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
 synthesizeKey
 (
 "
@@ -2593,25 +2441,12 @@ VK_UP
 {
 }
 )
-)
 ;
-break
-;
-case
-21
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 volumechange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -2649,15 +2484,6 @@ muted
 "
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
-{
 synthesizeMouse
 (
 video
@@ -2667,26 +2493,11 @@ muteButtonCenterY
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-22
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 volumechange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -2722,17 +2533,9 @@ muted
 "
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
-{
 ok
 (
+await
 isMuteButtonMuted
 (
 )
@@ -2756,26 +2559,11 @@ muteButtonCenterY
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-23
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 volumechange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -2813,20 +2601,14 @@ muted
 "
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
-{
 ok
 (
 !
+(
+await
 isMuteButtonMuted
 (
+)
 )
 "
 Mute
@@ -2849,26 +2631,11 @@ fullscreenButtonCenterY
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-24
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 mozfullscreenchange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -2891,14 +2658,7 @@ be
 "
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-function
-(
-)
-{
+await
 isVolumeSliderShowingCorrectVolume
 (
 video
@@ -2915,26 +2675,11 @@ VK_ESCAPE
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-25
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 mozfullscreenchange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -2957,14 +2702,7 @@ be
 "
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-function
-(
-)
-{
+await
 isVolumeSliderShowingCorrectVolume
 (
 video
@@ -2991,26 +2729,11 @@ VK_DOWN
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-26
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 volumechange
-"
-"
-checking
-event
-type
 "
 )
 ;
@@ -3034,14 +2757,7 @@ by
 "
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-function
-(
-)
-{
+await
 isVolumeSliderShowingCorrectVolume
 (
 video
@@ -3049,6 +2765,17 @@ video
 volume
 )
 ;
+}
+)
+;
+add_task
+(
+async
+function
+whitespace_pause_video
+(
+)
+{
 synthesizeMouse
 (
 video
@@ -3058,38 +2785,20 @@ playButtonCenterY
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-27
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 play
 "
-"
-checking
-event
-type
-"
 )
 ;
-SimpleTest
+video
 .
-executeSoon
-(
+focus
 (
 )
-=
->
-{
+;
 synthesizeKey
 (
 "
@@ -3098,38 +2807,14 @@ synthesizeKey
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-28
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 pause
 "
-"
-checking
-event
-type
-"
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-(
-)
-=
->
-{
 synthesizeMouse
 (
 video
@@ -3139,40 +2824,20 @@ playButtonCenterY
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-29
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 play
 "
-"
-checking
-event
-type
-"
 )
 ;
-SimpleTest
-.
-executeSoon
-(
-(
+}
 )
-=
->
-{
+;
 /
-/
+*
+*
 Bug
 1352724
 :
@@ -3186,6 +2851,16 @@ pause
 video
 immediately
 .
+*
+/
+add_task
+(
+async
+function
+click_and_hold_slider
+(
+)
+{
 synthesizeMouse
 (
 video
@@ -3205,97 +2880,18 @@ button
 }
 )
 ;
-}
-)
-;
-break
-;
-case
-30
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 pause
 "
 "
-checking
-event
-type
-"
-)
-;
-break
-;
-case
-31
-:
-is
-(
-event
-.
-type
-"
 seeking
 "
 "
-checking
-event
-type
-"
-)
-;
-ok
-(
-true
-"
-video
-position
-is
-at
-"
-+
-video
-.
-currentTime
-)
-;
-break
-;
-case
-32
-:
-is
-(
-event
-.
-type
-"
 seeked
 "
-"
-checking
-event
-type
-"
-)
-;
-ok
-(
-true
-"
-video
-position
-is
-at
-"
-+
-video
-.
-currentTime
 )
 ;
 synthesizeMouse
@@ -3309,47 +2905,16 @@ scrubberCenterY
 }
 )
 ;
-break
-;
-case
-33
-:
-is
+await
+waitForEvent
 (
-event
-.
-type
 "
 play
 "
-"
-checking
-event
-type
-"
 )
 ;
-ok
-(
-true
-"
-video
-resume
-after
-mouseup
-"
-)
-;
-synthesizeMouse
-(
-video
-playButtonCenterX
-playButtonCenterY
-{
 }
 )
-;
-break
 ;
 /
 /
@@ -3362,248 +2927,42 @@ video
 is
 paused
 before
-calling
-SimpleTest
-.
-finish
-(
-)
-.
-case
-34
-:
-is
-(
-event
-.
-type
-"
-pause
-"
-"
-checking
-event
-type
-"
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
-break
-;
-default
-:
-throw
-"
-unexpected
+finishing
+the
 test
-#
-"
-+
-testnum
-+
-"
-w
-/
-event
-"
-+
-event
 .
-type
-;
-}
-testnum
-+
-+
-;
-}
-function
-canplaythroughevent
+add_task
 (
-event
+async
+function
+ensure_video_pause
+(
+)
+{
+if
+(
+!
+video
+.
+paused
 )
 {
 video
 .
-removeEventListener
+pause
 (
-"
-canplaythrough
-"
-canplaythroughevent
 )
 ;
-/
-/
-Other
-events
-expected
-by
-the
-test
-.
-video
-.
-addEventListener
-(
-"
-play
-"
-runTest
-)
-;
-video
-.
-addEventListener
+await
+waitForEvent
 (
 "
 pause
 "
-runTest
-)
-;
-video
-.
-addEventListener
-(
-"
-volumechange
-"
-runTest
-)
-;
-video
-.
-addEventListener
-(
-"
-seeking
-"
-runTest
-)
-;
-video
-.
-addEventListener
-(
-"
-seeked
-"
-runTest
-)
-;
-document
-.
-addEventListener
-(
-"
-mozfullscreenchange
-"
-runTest
-)
-;
-/
-/
-Begin
-the
-test
-.
-runTest
-(
-event
 )
 ;
 }
-function
-startMediaLoad
-(
-)
-{
-/
-/
-Kick
-off
-test
-once
-video
-has
-loaded
-in
-its
-canplaythrough
-event
-handler
-.
-video
-.
-src
-=
-"
-seek_with_sound
-.
-ogg
-"
-;
-video
-.
-addEventListener
-(
-"
-canplaythrough
-"
-canplaythroughevent
-)
-;
 }
-function
-loadevent
-(
-event
-)
-{
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-"
-set
-"
-:
-[
-[
-"
-media
-.
-cache_size
-"
-40000
-]
-]
-}
-startMediaLoad
-)
-;
-}
-window
-.
-addEventListener
-(
-"
-load
-"
-loadevent
-)
-;
-SimpleTest
-.
-waitForExplicitFinish
-(
 )
 ;
 <
