Backed out changeset aa39d335365a (bug 1402877) for failing a11y accessible/tests/mochitest/actions/test_media.html. r=backout
UltraBlame original commit: 75a8c05fb7d2519a5ba66eaa6c967d374f1dbdbe

--- a/toolkit/content/tests/widgets/test_videocontrols.html
+++ b/toolkit/content/tests/widgets/test_videocontrols.html
@@ -72,53 +72,6 @@ js
 script
 >
 <
-script
-type
-=
-"
-text
-/
-javascript
-"
-src
-=
-"
-/
-tests
-/
-SimpleTest
-/
-SpawnTask
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-type
-=
-"
-text
-/
-javascript
-"
-src
-=
-"
-head
-.
-js
-"
->
-<
-/
-script
->
-<
 link
 rel
 =
@@ -551,7 +504,12 @@ scrubberHeight
 2
 )
 ;
-const
+var
+testnum
+=
+1
+;
+var
 video
 =
 document
@@ -563,39 +521,95 @@ video
 "
 )
 ;
-let
-expectingEvents
+const
+domUtil
+=
+SpecialPowers
+.
+Cc
+[
+"
+mozilla
+.
+org
+/
+inspector
+/
+dom
+-
+utils
 ;
-let
-expectingEventPromise
+1
+"
+]
+.
+getService
+(
+SpecialPowers
+.
+Ci
+.
+inIDOMUtils
+)
 ;
-async
+function
+getButtonByAttribute
+(
+aName
+aValue
+)
+{
+var
+kids
+=
+domUtil
+.
+getChildrenForNode
+(
+video
+true
+)
+;
+var
+videocontrols
+=
+kids
+[
+1
+]
+;
+return
+SpecialPowers
+.
+wrap
+(
+document
+)
+.
+getAnonymousElementByAttribute
+(
+videocontrols
+aName
+aValue
+)
+;
+}
 function
 isMuteButtonMuted
 (
 )
 {
-const
+var
 muteButton
 =
-getAnonElementWithinVideoByAttribute
+getButtonByAttribute
 (
-video
 "
 anonid
 "
 "
 muteButton
 "
-)
-;
-await
-new
-Promise
-(
-SimpleTest
-.
-executeSoon
 )
 ;
 return
@@ -615,34 +629,23 @@ true
 "
 ;
 }
-async
 function
 isVolumeSliderShowingCorrectVolume
 (
 expectedVolume
 )
 {
-const
+var
 volumeControl
 =
-getAnonElementWithinVideoByAttribute
+getButtonByAttribute
 (
-video
 "
 anonid
 "
 "
 volumeControl
 "
-)
-;
-await
-new
-Promise
-(
-SimpleTest
-.
-executeSoon
 )
 ;
 is
@@ -724,274 +727,60 @@ getBoundingClientRect
 ;
 }
 function
-verifyExpectedEvent
+runTest
 (
 event
-)
-{
-const
-checkingEvent
-=
-expectingEvents
-.
-shift
-(
-)
-;
-if
-(
-event
-.
-type
-=
-=
-checkingEvent
 )
 {
 ok
 (
 true
 "
-checking
-event
-type
-:
+-
+-
+-
+-
+-
+test
+#
 "
-checkingEvent
++
+testnum
++
+"
+-
+-
+-
+-
+-
+"
 )
 ;
-}
-else
-{
-expectingEventPromise
-.
-reject
+switch
 (
-new
-Error
-(
-Got
-event
-:
-{
-event
-.
-type
-}
-expected
-:
-{
-checkingEvent
-}
+testnum
 )
-)
-;
-}
-if
-(
-expectingEvents
-.
-length
-=
-=
-0
-)
-{
-expectingEventPromise
-.
-resolve
-(
-)
-;
-}
-}
-async
-function
-waitForEvent
-(
-.
-.
-.
-eventTypes
-)
-{
-expectingEvents
-=
-eventTypes
-;
-return
-new
-Promise
-(
-(
-resolve
-reject
-)
-=
->
-expectingEventPromise
-=
-{
-resolve
-reject
-}
-)
-.
-catch
-(
-e
-=
->
 {
 /
-/
-Throw
-error
-here
-to
-get
-the
-caller
-in
-error
-stack
-.
-ok
-(
-false
-e
-)
-;
-}
-)
-;
-}
-add_task
-(
-async
-function
-setup
-(
-)
-{
-await
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-"
-set
-"
-:
-[
-[
-"
-media
-.
-cache_size
-"
-40000
-]
-]
-}
-)
-;
-await
-new
-Promise
-(
-resolve
-=
->
-{
-video
-.
-addEventListener
-(
-"
-canplaythrough
-"
-resolve
-{
-once
-:
-true
-}
-)
-;
-video
-.
-src
-=
-"
-seek_with_sound
-.
-ogg
-"
-;
-}
-)
-video
-.
-addEventListener
-(
-"
+*
+*
+Check
+operation
+of
 play
-"
-verifyExpectedEvent
-)
-;
-video
-.
-addEventListener
-(
-"
+/
 pause
-"
-verifyExpectedEvent
-)
-;
-video
+/
+mute
+/
+unmute
+buttons
 .
-addEventListener
-(
-"
-volumechange
-"
-verifyExpectedEvent
-)
-;
-video
-.
-addEventListener
-(
-"
-seeking
-"
-verifyExpectedEvent
-)
-;
-video
-.
-addEventListener
-(
-"
-seeked
-"
-verifyExpectedEvent
-)
-;
-document
-.
-addEventListener
-(
-"
-mozfullscreenchange
-"
-verifyExpectedEvent
-)
-;
+*
+/
+case
+1
+:
 /
 /
 Check
@@ -1001,6 +790,21 @@ upon
 load
 is
 (
+event
+.
+type
+"
+canplaythrough
+"
+"
+checking
+event
+type
+"
+)
+;
+is
+(
 video
 .
 paused
@@ -1027,16 +831,20 @@ state
 "
 )
 ;
-}
-)
-;
-add_task
+/
+/
+Click
+the
+play
+button
+SimpleTest
+.
+executeSoon
 (
-async
-function
-click_playbutton
 (
 )
+=
+>
 {
 synthesizeMouse
 (
@@ -1047,11 +855,26 @@ playButtonCenterY
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+2
+:
+is
 (
+event
+.
+type
 "
 play
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -1083,16 +906,20 @@ state
 "
 )
 ;
-}
-)
-;
-add_task
+/
+/
+Click
+the
+pause
+button
+SimpleTest
+.
+executeSoon
 (
-async
-function
-click_pausebutton
 (
 )
+=
+>
 {
 synthesizeMouse
 (
@@ -1102,123 +929,27 @@ playButtonCenterY
 {
 }
 )
-await
-waitForEvent
+;
+}
+)
+;
+break
+;
+case
+3
+:
+is
 (
+event
+.
+type
 "
 pause
 "
-)
-;
-is
-(
-video
-.
-paused
-true
 "
 checking
-video
-play
-state
-"
-)
-;
-is
-(
-video
-.
-muted
-false
-"
-checking
-video
-mute
-state
-"
-)
-;
-}
-)
-;
-add_task
-(
-async
-function
-mute_volume
-(
-)
-{
-synthesizeMouse
-(
-video
-muteButtonCenterX
-muteButtonCenterY
-{
-}
-)
-;
-await
-waitForEvent
-(
-"
-volumechange
-"
-)
-;
-is
-(
-video
-.
-paused
-true
-"
-checking
-video
-play
-state
-"
-)
-;
-is
-(
-video
-.
-muted
-true
-"
-checking
-video
-mute
-state
-"
-)
-;
-}
-)
-;
-add_task
-(
-async
-function
-unmute_volume
-(
-)
-{
-synthesizeMouse
-(
-video
-muteButtonCenterX
-muteButtonCenterY
-{
-}
-)
-;
-await
-waitForEvent
-(
-"
-volumechange
+event
+type
 "
 )
 ;
@@ -1250,8 +981,105 @@ state
 "
 )
 ;
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
+{
+synthesizeMouse
+(
+video
+muteButtonCenterX
+muteButtonCenterY
+{
 }
 )
+;
+/
+/
+Mute
+.
+}
+)
+;
+break
+;
+case
+4
+:
+is
+(
+event
+.
+type
+"
+volumechange
+"
+"
+checking
+event
+type
+"
+)
+;
+is
+(
+video
+.
+paused
+true
+"
+checking
+video
+play
+state
+"
+)
+;
+is
+(
+video
+.
+muted
+true
+"
+checking
+video
+mute
+state
+"
+)
+;
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
+{
+synthesizeMouse
+(
+video
+muteButtonCenterX
+muteButtonCenterY
+{
+}
+)
+;
+/
+/
+Unmute
+.
+}
+)
+;
+break
 ;
 /
 *
@@ -1283,14 +1111,52 @@ them
 )
 *
 /
-add_task
+case
+5
+:
+is
 (
-async
-function
-styled_video
-(
+event
+.
+type
+"
+volumechange
+"
+"
+checking
+event
+type
+"
 )
-{
+;
+is
+(
+video
+.
+paused
+true
+"
+checking
+video
+play
+state
+"
+)
+;
+is
+(
+video
+.
+muted
+false
+"
+checking
+video
+mute
+state
+"
+)
+;
 video
 .
 style
@@ -1351,6 +1217,15 @@ Click
 the
 play
 button
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
+{
 synthesizeMouse
 (
 video
@@ -1364,11 +1239,26 @@ playButtonCenterY
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+6
+:
+is
 (
+event
+.
+type
 "
 play
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -1400,22 +1290,29 @@ state
 "
 )
 ;
-/
-/
-Pause
-the
-video
 video
 .
 pause
 (
 )
 ;
-await
-waitForEvent
+break
+;
+case
+7
+:
+is
 (
+event
+.
+type
 "
 pause
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -1453,6 +1350,15 @@ Click
 the
 mute
 button
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
+{
 synthesizeMouse
 (
 video
@@ -1466,11 +1372,26 @@ muteButtonCenterY
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+8
+:
+is
 (
+event
+.
+type
 "
 volumechange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -1508,6 +1429,10 @@ Clear
 the
 style
 set
+in
+test
+5
+.
 video
 .
 style
@@ -1535,22 +1460,45 @@ padding
 "
 "
 ;
-/
-/
-Unmute
-the
-video
 video
 .
 muted
 =
 false
 ;
-await
-waitForEvent
+break
+;
+/
+*
+*
+Previous
+tests
+have
+moved
+playback
+postion
+reset
+it
+to
+0
+.
+*
+/
+case
+9
+:
+is
 (
+event
+.
+type
 "
 volumechange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -1582,33 +1530,6 @@ state
 "
 )
 ;
-}
-)
-;
-/
-*
-*
-Previous
-tests
-have
-moved
-playback
-postion
-reset
-it
-to
-0
-.
-*
-/
-add_task
-(
-async
-function
-reset_currentTime
-(
-)
-{
 ok
 (
 true
@@ -1632,15 +1553,93 @@ currentTime
 .
 0
 ;
-await
-waitForEvent
+break
+;
+case
+10
+:
+is
 (
+event
+.
+type
 "
 seeking
 "
 "
+checking
+event
+type
+"
+)
+;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
+)
+;
+break
+;
+/
+*
+*
+Drag
+the
+slider
+'
+s
+thumb
+to
+the
+halfway
+point
+with
+the
+mouse
+.
+*
+/
+case
+11
+:
+is
+(
+event
+.
+type
+"
 seeked
 "
+"
+checking
+event
+type
+"
+)
+;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
 )
 ;
 /
@@ -1677,57 +1676,21 @@ position
 "
 )
 ;
-ok
-(
-true
-"
-video
-position
-is
-at
-"
-+
-video
+SimpleTest
 .
-currentTime
-)
-;
-}
-)
-;
-/
-*
-*
-Drag
-the
-slider
-'
-s
-thumb
-to
-the
-halfway
-point
-with
-the
-mouse
-.
-*
-/
-add_task
+executeSoon
 (
-async
-function
-drag_slider
 (
 )
+=
+>
 {
-const
+var
 beginDragX
 =
 scrubberOffsetX
 ;
-const
+var
 endDragX
 =
 scrubberOffsetX
@@ -1737,13 +1700,6 @@ scrubberWidth
 /
 2
 )
-;
-const
-expectedTime
-=
-videoDuration
-/
-2
 ;
 synthesizeMouse
 (
@@ -1796,14 +1752,26 @@ button
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+12
+:
+is
 (
+event
+.
+type
 "
 seeking
 "
 "
-seeked
+checking
+event
+type
 "
 )
 ;
@@ -1821,6 +1789,69 @@ video
 .
 currentTime
 )
+;
+break
+;
+/
+*
+*
+Click
+the
+slider
+at
+the
+1
+/
+4
+point
+with
+the
+mouse
+(
+jump
+backwards
+)
+*
+/
+case
+13
+:
+is
+(
+event
+.
+type
+"
+seeked
+"
+"
+checking
+event
+type
+"
+)
+;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
+)
+;
+var
+expectedTime
+=
+videoDuration
+/
+2
 ;
 /
 /
@@ -1897,37 +1928,14 @@ position
 "
 )
 ;
-}
-)
-;
-/
-*
-*
-Click
-the
-slider
-at
-the
-1
-/
-4
-point
-with
-the
-mouse
+SimpleTest
+.
+executeSoon
 (
-jump
-backwards
-)
-*
-/
-add_task
-(
-async
-function
-click_slider
 (
 )
+=
+>
 {
 synthesizeMouse
 (
@@ -1944,14 +1952,61 @@ scrubberCenterY
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+14
+:
+is
 (
+event
+.
+type
 "
 seeking
 "
 "
+checking
+event
+type
+"
+)
+;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
+)
+;
+break
+;
+case
+15
+:
+is
+(
+event
+.
+type
+"
 seeked
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -2067,7 +2122,7 @@ previous
 /
 position
 .
-const
+var
 lastPosition
 =
 (
@@ -2122,11 +2177,29 @@ volume
 .
 1
 ;
-await
-waitForEvent
+break
+;
+/
+/
+See
+bug
+694696
+.
+case
+16
+:
+is
 (
+event
+.
+type
 "
 volumechange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -2162,29 +2235,20 @@ muted
 "
 )
 ;
-}
-)
-;
-/
-/
-See
-bug
-694696
-.
-add_task
-(
-async
-function
-change_volume
-(
-)
-{
 video
 .
 focus
 (
 )
 ;
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
 synthesizeKey
 (
 "
@@ -2193,12 +2257,25 @@ VK_DOWN
 {
 }
 )
+)
 ;
-await
-waitForEvent
+break
+;
+case
+17
+:
+is
 (
+event
+.
+type
 "
 volumechange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -2232,9 +2309,17 @@ muted
 "
 )
 ;
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
+{
 ok
 (
-await
 isMuteButtonMuted
 (
 )
@@ -2258,11 +2343,26 @@ VK_UP
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+18
+:
+is
 (
+event
+.
+type
 "
 volumechange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -2297,14 +2397,20 @@ muted
 "
 )
 ;
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
+{
 ok
 (
 !
-(
-await
 isMuteButtonMuted
 (
-)
 )
 "
 Mute
@@ -2327,11 +2433,26 @@ VK_DOWN
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+19
+:
+is
 (
+event
+.
+type
 "
 volumechange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -2365,9 +2486,17 @@ muted
 "
 )
 ;
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
+{
 ok
 (
-await
 isMuteButtonMuted
 (
 )
@@ -2391,11 +2520,26 @@ muteButtonCenterY
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+20
+:
+is
 (
+event
+.
+type
 "
 volumechange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -2433,6 +2577,14 @@ muted
 "
 )
 ;
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
 synthesizeKey
 (
 "
@@ -2441,12 +2593,25 @@ VK_UP
 {
 }
 )
+)
 ;
-await
-waitForEvent
+break
+;
+case
+21
+:
+is
 (
+event
+.
+type
 "
 volumechange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -2484,6 +2649,15 @@ muted
 "
 )
 ;
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
+{
 synthesizeMouse
 (
 video
@@ -2493,11 +2667,26 @@ muteButtonCenterY
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+22
+:
+is
 (
+event
+.
+type
 "
 volumechange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -2533,9 +2722,17 @@ muted
 "
 )
 ;
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
+{
 ok
 (
-await
 isMuteButtonMuted
 (
 )
@@ -2559,11 +2756,26 @@ muteButtonCenterY
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+23
+:
+is
 (
+event
+.
+type
 "
 volumechange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -2601,14 +2813,20 @@ muted
 "
 )
 ;
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
+{
 ok
 (
 !
-(
-await
 isMuteButtonMuted
 (
-)
 )
 "
 Mute
@@ -2631,11 +2849,26 @@ fullscreenButtonCenterY
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+24
+:
+is
 (
+event
+.
+type
 "
 mozfullscreenchange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -2658,7 +2891,14 @@ be
 "
 )
 ;
-await
+SimpleTest
+.
+executeSoon
+(
+function
+(
+)
+{
 isVolumeSliderShowingCorrectVolume
 (
 video
@@ -2675,11 +2915,26 @@ VK_ESCAPE
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+25
+:
+is
 (
+event
+.
+type
 "
 mozfullscreenchange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -2702,7 +2957,14 @@ be
 "
 )
 ;
-await
+SimpleTest
+.
+executeSoon
+(
+function
+(
+)
+{
 isVolumeSliderShowingCorrectVolume
 (
 video
@@ -2729,11 +2991,26 @@ VK_DOWN
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+26
+:
+is
 (
+event
+.
+type
 "
 volumechange
+"
+"
+checking
+event
+type
 "
 )
 ;
@@ -2757,7 +3034,14 @@ by
 "
 )
 ;
-await
+SimpleTest
+.
+executeSoon
+(
+function
+(
+)
+{
 isVolumeSliderShowingCorrectVolume
 (
 video
@@ -2765,17 +3049,6 @@ video
 volume
 )
 ;
-}
-)
-;
-add_task
-(
-async
-function
-whitespace_pause_video
-(
-)
-{
 synthesizeMouse
 (
 video
@@ -2785,20 +3058,38 @@ playButtonCenterY
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+27
+:
+is
 (
+event
+.
+type
 "
 play
 "
+"
+checking
+event
+type
+"
 )
 ;
-video
+SimpleTest
 .
-focus
+executeSoon
+(
 (
 )
-;
+=
+>
+{
 synthesizeKey
 (
 "
@@ -2807,14 +3098,38 @@ synthesizeKey
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+28
+:
+is
 (
+event
+.
+type
 "
 pause
 "
+"
+checking
+event
+type
+"
 )
 ;
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
+{
 synthesizeMouse
 (
 video
@@ -2824,20 +3139,40 @@ playButtonCenterY
 }
 )
 ;
-await
-waitForEvent
-(
-"
-play
-"
-)
-;
 }
 )
 ;
+break
+;
+case
+29
+:
+is
+(
+event
+.
+type
+"
+play
+"
+"
+checking
+event
+type
+"
+)
+;
+SimpleTest
+.
+executeSoon
+(
+(
+)
+=
+>
+{
 /
-*
-*
+/
 Bug
 1352724
 :
@@ -2851,16 +3186,6 @@ pause
 video
 immediately
 .
-*
-/
-add_task
-(
-async
-function
-click_and_hold_slider
-(
-)
-{
 synthesizeMouse
 (
 video
@@ -2880,18 +3205,97 @@ button
 }
 )
 ;
-await
-waitForEvent
+}
+)
+;
+break
+;
+case
+30
+:
+is
 (
+event
+.
+type
 "
 pause
 "
 "
+checking
+event
+type
+"
+)
+;
+break
+;
+case
+31
+:
+is
+(
+event
+.
+type
+"
 seeking
 "
 "
+checking
+event
+type
+"
+)
+;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
+)
+;
+break
+;
+case
+32
+:
+is
+(
+event
+.
+type
+"
 seeked
 "
+"
+checking
+event
+type
+"
+)
+;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
 )
 ;
 synthesizeMouse
@@ -2905,16 +3309,47 @@ scrubberCenterY
 }
 )
 ;
-await
-waitForEvent
+break
+;
+case
+33
+:
+is
 (
+event
+.
+type
 "
 play
 "
+"
+checking
+event
+type
+"
 )
 ;
+ok
+(
+true
+"
+video
+resume
+after
+mouseup
+"
+)
+;
+synthesizeMouse
+(
+video
+playButtonCenterX
+playButtonCenterY
+{
 }
 )
+;
+break
 ;
 /
 /
@@ -2927,42 +3362,248 @@ video
 is
 paused
 before
-finishing
+calling
+SimpleTest
+.
+finish
+(
+)
+.
+case
+34
+:
+is
+(
+event
+.
+type
+"
+pause
+"
+"
+checking
+event
+type
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+break
+;
+default
+:
+throw
+"
+unexpected
+test
+#
+"
++
+testnum
++
+"
+w
+/
+event
+"
++
+event
+.
+type
+;
+}
+testnum
++
++
+;
+}
+function
+canplaythroughevent
+(
+event
+)
+{
+video
+.
+removeEventListener
+(
+"
+canplaythrough
+"
+canplaythroughevent
+)
+;
+/
+/
+Other
+events
+expected
+by
 the
 test
 .
-add_task
+video
+.
+addEventListener
 (
-async
+"
+play
+"
+runTest
+)
+;
+video
+.
+addEventListener
+(
+"
+pause
+"
+runTest
+)
+;
+video
+.
+addEventListener
+(
+"
+volumechange
+"
+runTest
+)
+;
+video
+.
+addEventListener
+(
+"
+seeking
+"
+runTest
+)
+;
+video
+.
+addEventListener
+(
+"
+seeked
+"
+runTest
+)
+;
+document
+.
+addEventListener
+(
+"
+mozfullscreenchange
+"
+runTest
+)
+;
+/
+/
+Begin
+the
+test
+.
+runTest
+(
+event
+)
+;
+}
 function
-ensure_video_pause
+startMediaLoad
 (
 )
 {
-if
-(
-!
+/
+/
+Kick
+off
+test
+once
+video
+has
+loaded
+in
+its
+canplaythrough
+event
+handler
+.
 video
 .
-paused
+src
+=
+"
+seek_with_sound
+.
+ogg
+"
+;
+video
+.
+addEventListener
+(
+"
+canplaythrough
+"
+canplaythroughevent
+)
+;
+}
+function
+loadevent
+(
+event
 )
 {
-video
+SpecialPowers
 .
-pause
+pushPrefEnv
 (
-)
-;
-await
-waitForEvent
-(
+{
 "
-pause
+set
 "
+:
+[
+[
+"
+media
+.
+cache_size
+"
+40000
+]
+]
+}
+startMediaLoad
 )
 ;
 }
-}
+window
+.
+addEventListener
+(
+"
+load
+"
+loadevent
+)
+;
+SimpleTest
+.
+waitForExplicitFinish
+(
 )
 ;
 <
