--- a/browser/extensions/formautofill/test/mochitest/test_basic_creditcard_autocomplete_form.html
+++ b/browser/extensions/formautofill/test/mochitest/test_basic_creditcard_autocomplete_form.html
@@ -734,6 +734,65 @@ history_only_menu_checking
 (
 )
 {
+/
+/
+TODO
+:
+eliminate
+the
+timeout
+when
+we
+'
+re
+able
+to
+indicate
+the
+right
+/
+/
+timing
+to
+start
+.
+/
+/
+/
+/
+After
+test
+process
+was
+re
+-
+spawning
+to
+https
+scheme
+.
+Wait
+2
+secs
+/
+/
+to
+ensure
+the
+environment
+is
+ready
+to
+do
+storage
+setup
+.
+await
+sleep
+(
+2000
+)
+;
 await
 setupFormHistory
 (
