--- a/dom/tests/mochitest/general/test_contentViewer_overrideDPPX.html
+++ b/dom/tests/mochitest/general/test_contentViewer_overrideDPPX.html
@@ -115,6 +115,9 @@ iframe
 iframe
 >
 <
+img
+>
+<
 script
 type
 =
@@ -143,6 +146,18 @@ iframe
 )
 .
 contentWindow
+;
+const
+image
+=
+document
+.
+querySelector
+(
+"
+img
+"
+)
 ;
 const
 originalDPR
@@ -178,6 +193,129 @@ originalZoom
 0
 .
 5
+;
+const
+imageSets
+=
+{
+"
+1x
+"
+:
+"
+data
+:
+image
+/
+png
+;
+base64
+iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8
+/
+9hAAAA
+"
++
+"
+GUlEQVQ4jWP4z8DwnxLMMGrAqAGjBgwXAwAwxP4QWURl4wAAAABJRU5ErkJggg
+=
+=
+"
+"
+1
+.
+5x
+"
+:
+"
+data
+:
+image
+/
+png
+;
+base64
+iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8
+/
+9hAAAA
+"
++
+"
+GElEQVQ4jWNgaGD4TxEeNWDUgFEDhosBAOsIfxAZ
+/
+CYXAAAAAElFTkSuQmCC
+"
+"
+2x
+"
+:
+"
+data
+:
+image
+/
+png
+;
+base64
+iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8
+/
+9hAAAA
+"
++
+"
+GElEQVQ4jWNgYPj
+/
+nzI8asCoAaMGDBMDADKm
+/
+hBZaHKGAAAAAElFTkSuQmCC
+"
+}
+;
+image
+.
+srcset
+=
+Object
+.
+entries
+(
+imageSets
+)
+.
+map
+(
+v
+=
+>
+v
+[
+1
+]
++
+"
+"
++
+v
+[
+0
+]
+)
+.
+join
+(
+"
+"
+)
+;
+image
+.
+src
+=
+imageSets
+[
+"
+1x
+"
+]
 ;
 const
 setOverrideDPPX
@@ -1982,6 +2120,204 @@ location
 reload
 (
 true
+)
+;
+}
+"
+test
+overrideDPPX
+with
+srcset
+"
+:
+async
+function
+(
+done
+)
+{
+assertValuesAreInitial
+(
+)
+;
+let
+originalSrc
+=
+image
+.
+src
+;
+setOverrideDPPX
+(
+1
+)
+;
+await
+new
+Promise
+(
+resolve
+=
+>
+image
+.
+onload
+=
+resolve
+)
+;
+is
+(
+image
+.
+currentSrc
+imageSets
+[
+"
+1x
+"
+]
+"
+Image
+url
+is
+properly
+set
+for
+1dppx
+.
+"
+)
+;
+setOverrideDPPX
+(
+1
+.
+5
+)
+;
+await
+new
+Promise
+(
+resolve
+=
+>
+image
+.
+onload
+=
+resolve
+)
+;
+is
+(
+image
+.
+currentSrc
+imageSets
+[
+"
+1
+.
+5x
+"
+]
+"
+Image
+url
+is
+properly
+set
+for
+1
+.
+5dppx
+.
+"
+)
+;
+setOverrideDPPX
+(
+2
+)
+;
+await
+new
+Promise
+(
+resolve
+=
+>
+image
+.
+onload
+=
+resolve
+)
+;
+is
+(
+image
+.
+currentSrc
+imageSets
+[
+"
+2x
+"
+]
+"
+Image
+is
+properly
+set
+for
+2dppx
+.
+"
+)
+;
+setOverrideDPPX
+(
+0
+)
+;
+await
+new
+Promise
+(
+resolve
+=
+>
+image
+.
+onload
+=
+resolve
+)
+;
+is
+(
+image
+.
+currentSrc
+originalSrc
+"
+Image
+is
+properly
+restored
+to
+the
+default
+value
+.
+"
+)
+;
+done
+(
 )
 ;
 }
