Bug 1409166 - Check whether the target animating frame is scrolled out of each scrollable ancestor. r=birtles,mattwoodrow
Before this patch, we had been checking each scrollable ancestor is scrolled
out of its scrollable ancestor.  So if the target animating frame is at the
bottom of its scrollable parent and if half of the scrollable parent is
scrolled out of its ancestor, the animating frame was considered as 'in-view'.

MozReview-Commit-ID: BDueuF3cT4I

UltraBlame original commit: e760609ee0bbc072e914e9fda5131863d75f172b

--- a/dom/animation/test/chrome/test_restyles.html
+++ b/dom/animation/test/chrome/test_restyles.html
@@ -2152,18 +2152,45 @@ background
 color
 100s
 ;
+'
++
+'
 position
 :
 relative
 ;
+'
++
+'
 top
 :
-100px
+60px
 ;
 '
 }
 )
 ;
+/
+/
+This
+element
+is
+in
+-
+view
+in
+the
+parent
+but
+/
+/
+out
+of
+view
+in
+the
+grandparent
+.
 grandParent
 .
 appendChild
