Bug 1402877 - Part 2. Don't let click event dispatch through media controls to video element. r=jaws
MozReview-Commit-ID: BUW9PDxCSAY

UltraBlame original commit: b93c18c066e52d657ad9b3636bb55764b9435064

--- a/toolkit/content/tests/widgets/test_videocontrols.html
+++ b/toolkit/content/tests/widgets/test_videocontrols.html
@@ -2917,6 +2917,151 @@ play
 )
 ;
 /
+*
+*
+Bug
+1402877
+:
+Don
+'
+t
+let
+click
+event
+dispatch
+through
+media
+controls
+to
+video
+element
+.
+*
+/
+add_task
+(
+async
+function
+click_event_dispatch
+(
+)
+{
+const
+clientScriptClickHandler
+=
+(
+e
+)
+=
+>
+{
+ok
+(
+false
+"
+Should
+not
+receive
+the
+event
+"
+)
+;
+}
+;
+video
+.
+addEventListener
+(
+"
+click
+"
+clientScriptClickHandler
+)
+;
+video
+.
+pause
+(
+)
+;
+await
+waitForEvent
+(
+"
+pause
+"
+)
+;
+video
+.
+currentTime
+=
+0
+.
+0
+;
+await
+waitForEvent
+(
+"
+seeking
+"
+"
+seeked
+"
+)
+;
+is
+(
+video
+.
+paused
+true
+"
+checking
+video
+play
+state
+"
+)
+;
+synthesizeMouse
+(
+video
+scrubberOffsetX
++
+10
+scrubberCenterY
+{
+}
+)
+;
+await
+waitForEvent
+(
+"
+seeking
+"
+"
+seeked
+"
+)
+;
+video
+.
+removeEventListener
+(
+"
+click
+"
+clientScriptClickHandler
+)
+;
+}
+)
+;
+/
 /
 Bug
 1367194
